fixed spacing of filter date search

--- a/src/app/search-results/search-results.component.css
+++ b/src/app/search-results/search-results.component.css
@@ -30,3 +30,14 @@ th {
 #searchButton {
     margin-left: 10px;
 }
+
+#date-picker {
+    float: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+}
+
+#clear-date-button {
+    margin-left: 10px;
+}
